# chat-lms-agent

./: .gitignore  AGENTS.md  PRD.md  README.en.md  README.md  pyproject.toml
.codex-plugin/: plugin.json
codex-plugin/: README.md
docs/: academy-data-contract.md  agent-tool-registry.md  architecture.md  external-integration-contract.md  golden-standards.md  model-catalog.json  oss-reference-registry.md  runtime-boundary.md  session-logging.md  shortcuts.md  side-panel-building-block-catalog.md  side-panel-design-reference.md  side-panel-user-owned-html-css.md  teacher-runbook.md  terminology.md
evidence/: A1-write-actions-green.txt  A1-write-actions-red.txt  A5-gate-green.txt  A5-gate-red.txt  C1-isolation-bootstrap-tests.txt  C1-isolation-pytest.txt  C1-isolation-ruff.txt  D1-overhead-green.txt  D1-overhead-red.txt
hooks/: hooks.json
plans/: STATUS.md  academy-harness-upgrade-execution-plan.md  academy-record-types-keystone-plan.md  academy-viewer-one-command-and-shortcuts-plan.md  academy-write-workflow-engine-plan.md  chat-lms-agent-db-side-panel-harness-plan.md  chat-lms-agent-harness-v1-wave-plan.md  chat-lms-agent-self-maintaining-harness.md  codex-desktop-transition-ready-harness-v3-plan.md  core3-impl-brief.md  core3-review-fixes-brief.md  dogfood-data-binding-and-synthetic-matrix-plan.md  external-integrations-sms-kakao-plan.md  gws-integration-plan.md  harness-p0-remediation-wave-plan.md  harness-strengthening-implementation.md  harness-v2-agentic-hardening-plan.md  harness-v3-red-test-execution.md  harness-v4-implementation-wave-plan.md  harness-v4-oss-reference-expansion-plan.md  harness-v5-extensibility-and-independence-plan.md  kakao-channel-automation-design.md  meta-harness-crystallization-core3-plan.md  prompt-intent-routing-and-lesson-panel-plan.md  runtime-diagnosis-and-isolation-findings.md  session-transcript-logging-plan.md  side-panel-design-system-plan.md
routes/: README.md  classcard.json  gws-calendar.json  gws-schedule.json  gws-upload.json  kakao-channel.json  learner-records.json  lesson-assistant-panel.json  record-class.json  record-test-scores.json
scripts/: bootstrap.ps1
tests/: conftest.py  lesson_panel_scenario_data.py  lesson_panel_scenario_support.py  test_academy_db_cli.py  test_academy_db_import_normalization.py  test_academy_db_migrations.py  test_academy_db_reports.py  test_academy_db_restore.py  test_academy_db_v3.py  test_agent_tools_lifecycle_cli.py  test_agent_tools_reuse_check.py  test_agent_tools_route_record.py  test_approval_denied_terminal.py  test_bootstrap.py  test_bootstrap_session_log_wiring.py  test_bootstrap_v2.py  test_classcard_direct_audio.py  test_classcard_direct_scripts.py  test_classcard_registration.py  test_classcard_study.py  test_classcard_upload_plan.py  test_classcard_verification.py  test_cli_io_encoding.py  test_conftest_hermeticity.py  test_context_budget.py  test_context_doctor_closeout_v3.py  (+83 more)
(+173 files in other folders)
