[project]
name = "chat-lms-agent"
version = "0.1.0"
description = "Codex Desktop local teacher LMS agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "basedpyright>=1.39.6",
  "pytest>=9.0.0",
  "ruff>=0.15.16",
]

[project.scripts]
chat-lms = "chat_lms_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_lms_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D100",
  "D101",
  "D103",
  "D104",
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["INP001", "PLR2004", "S105", "S603", "S607"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.12"
include = ["src"]
